--- a/demo/themes/dark.css
+++ b/demo/themes/dark.css
@@ -1,24 +1,25 @@
 .brackets-viewer {
-  /* Colors */
-  --primary-background: rgb(38, 38, 38);
-  --secondary-background: #303030;
-  --match-background: var(--primary-background);
-  --font-color: #d9d9d9;
-  --win-color: #50b649;
-  --loss-color: #e61a1a;
-  --label-color: grey;
-  --hint-color: #a7a7a7;
-  --connector-color: #9e9e9e;
-  --border-color: #d9d9d9;
-  --border-hover-color: #b6b5b5;
+  --bv-bg-color: rgb(38, 38, 38);
+  --bv-surface-color: #303030;
+  --bv-match-bg-color: var(--bv-bg-color);
+  --bv-text-color: #d9d9d9;
+  --bv-heading-color: #e0e0e0;
+  --bv-win-color: #50b649;
+  --bv-lose-color: #e61a1a;
+  --bv-label-color: #bfbfbf;
+  --bv-hint-color: #a7a7a7;
+  --bv-connector-color: #9e9e9e;
+  --bv-border-color: #d9d9d9;
+  --bv-border-hover-color: #b6b5b5;
+  --bv-border-selected-color: #f5f5f5;
 
-  /* Sizes */
-  --text-size: 12px;
-  --round-margin: 40px;
-  --match-width: 150px;
-  --match-horizontal-padding: 8px;
-  --match-vertical-padding: 6px;
-  --connector-border-width: 2px;
-  --match-border-width: 1px;
-  --match-border-radius: 0.3em;
+  --bv-font-size: 12px;
+  --bv-round-gap: 40px;
+  --bv-match-width: 150px;
+  --bv-match-horizontal-padding: 8px;
+  --bv-match-vertical-padding: 6px;
+  --bv-connector-border-width: 2px;
+  --bv-match-border-width: 1px;
+  --bv-match-border-radius: 0.3em;
+  --bv-participant-image-size: 1em;
 }
