--- a/src/style.scss
+++ b/src/style.scss
@@ -1,37 +1,52 @@
-// Default integrated theme.
-
+// Default integrated theme and structural styles.
 .brackets-viewer {
-  /* Colors */
-  --primary-background: #fff;
-  --secondary-background: #eceff1;
-  --match-background: var(--primary-background);
-  --font-color: #212529;
-  --win-color: #50b649;
-  --loss-color: #e61a1a;
-  --label-color: grey;
-  --hint-color: #a7a7a7;
-  --connector-color: #9e9e9e;
-  --border-color: #d9d9d9;
-  --border-hover-color: #b6b5b5;
-  --border-selected-color: rgb(60, 60, 60);
+  /* Theme tokens */
+  --bv-bg-color: #fff;
+  --bv-surface-color: #eceff1;
+  --bv-match-bg-color: var(--bv-bg-color);
+  --bv-text-color: #212529;
+  --bv-heading-color: #6b6b6b;
+  --bv-win-color: #50b649;
+  --bv-lose-color: #e61a1a;
+  --bv-label-color: grey;
+  --bv-hint-color: #a7a7a7;
+  --bv-connector-color: #9e9e9e;
+  --bv-border-color: #d9d9d9;
+  --bv-border-hover-color: #b6b5b5;
+  --bv-border-selected-color: rgb(60, 60, 60);
 
   /* Sizes */
-  --text-size: 12px;
-  --round-margin: 40px;
-  --match-width: 150px;
-  --match-horizontal-padding: 8px;
-  --match-vertical-padding: 6px;
-  --connector-border-width: 2px;
-  --match-border-width: 1px;
-  --match-border-radius: 0.3em;
-  --participant-image-size: 1em;
-}
+  --bv-font-size: 12px;
+  --bv-round-gap: 40px;
+  --bv-match-width: 150px;
+  --bv-match-horizontal-padding: 8px;
+  --bv-match-vertical-padding: 6px;
+  --bv-connector-border-width: 2px;
+  --bv-match-border-width: 1px;
+  --bv-match-border-radius: 0.3em;
+  --bv-participant-image-size: 1em;
 
-.brackets-viewer {
-  $connector-width: var(--round-margin) / 2;
-  $connector-border: var(--connector-border-width) solid var(--connector-color);
+  // Example theme overrides for consumers to copy/adapt.
+  &.bv-theme-dark {
+    --bv-bg-color: #1e1e1e;
+    --bv-surface-color: #2a2a2a;
+    --bv-match-bg-color: #232323;
+    --bv-text-color: #f5f5f5;
+    --bv-heading-color: #c5c5c5;
+    --bv-label-color: #c5c5c5;
+    --bv-hint-color: #9aa0a6;
+    --bv-border-color: #3a3a3a;
+    --bv-border-hover-color: #5f5f5f;
+    --bv-border-selected-color: #9ca3af;
+    --bv-connector-color: #4c4c4c;
+    --bv-win-color: #6fbf73;
+    --bv-lose-color: #e57373;
+  }
 
-  $match-border: var(--match-border-width) solid var(--border-color);
+  $connector-width: var(--bv-round-gap) / 2;
+  $connector-border: var(--bv-connector-border-width) solid var(--bv-connector-color);
+
+  $match-border: var(--bv-match-border-width) solid var(--bv-border-color);
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
@@ -42,9 +57,9 @@
     display: none;
   }
 
-  background: var(--primary-background);
-  color: var(--font-color);
-  font-size: var(--text-size);
+  background: var(--bv-bg-color);
+  color: var(--bv-text-color);
+  font-size: var(--bv-font-size);
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -80,13 +95,13 @@
 
   h3 {
     text-align: center;
-    background: var(--secondary-background);
+    background: var(--bv-surface-color);
     font-size: 1.1em;
     padding: 10px 0px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: var(--match-width);
+    width: var(--bv-match-width);
   }
 
   .round-robin {
@@ -105,7 +120,7 @@
 
     .group {
       &:not(:last-of-type) {
-        margin-right: var(--round-margin);
+        margin-right: var(--bv-round-gap);
       }
 
       h2 {
@@ -115,7 +130,7 @@
       table {
         font-size: 1em;
         margin: 30px 0 20px 0;
-        color: #a7a7a7;
+        color: var(--bv-hint-color);
         border-collapse: collapse;
       }
 
@@ -127,7 +142,7 @@
       }
 
       td.hover {
-        background: var(--secondary-background);
+        background: var(--bv-surface-color);
       }
 
       th,
@@ -138,7 +153,7 @@
       td {
         &:nth-of-type(2),
         &:last-of-type {
-          color: var(--font-color);
+          color: var(--bv-text-color);
           font-weight: 500;
         }
       }
@@ -153,7 +168,7 @@
   .bracket {
     h2 {
       font-size: 1.5em;
-      color: gray;
+      color: var(--bv-heading-color);
     }
 
     .rounds {
@@ -168,7 +183,7 @@
         flex-direction: column;
 
         &:not(:last-of-type) {
-          margin-right: var(--round-margin);
+          margin-right: var(--bv-round-gap);
         }
       }
     }
@@ -179,7 +194,7 @@
     display: flex;
     align-items: center;
     margin: 10px 0;
-    width: var(--match-width);
+    width: var(--bv-match-width);
     position: relative;
 
     &.connect-next {
@@ -204,8 +219,8 @@
       }
 
       &.straight::after {
-        width: var(--round-margin);
-        right: calc(-1 * var(--round-margin));
+        width: var(--bv-round-gap);
+        right: calc(-1 * var(--bv-round-gap));
         top: 0;
         border-bottom: $connector-border;
         border-top: unset;
@@ -218,15 +233,15 @@
     width: 100%;
     position: relative;
     border: $match-border;
-    border-radius: var(--match-border-radius);
-    background: var(--match-background);
+    border-radius: var(--bv-match-border-radius);
+    background: var(--bv-match-bg-color);
 
     &:hover {
-      border: 1px solid var(--border-hover-color);
+      border: 1px solid var(--bv-border-hover-color);
     }
 
     &.popover-selected {
-      border: 1px solid var(--border-selected-color);
+      border: 1px solid var(--bv-border-selected-color);
     }
 
     & > span {
@@ -234,8 +249,8 @@
       top: -10px;
       font-size: 0.8em;
       padding: 0 5px;
-      color: var(--label-color);
-      background: var(--primary-background);
+      color: var(--bv-label-color);
+      background: var(--bv-bg-color);
       border-radius: 3px;
     }
 
@@ -262,8 +277,8 @@
 
       %straight {
         border-left: unset;
-        left: var(--round-margin);
-        width: var(--round-margin);
+        left: var(--bv-round-gap);
+        width: var(--bv-round-gap);
       }
 
       .bracket:nth-of-type(1) &.straight::before {
@@ -287,25 +302,25 @@
   .participant {
     display: flex;
     justify-content: space-between;
-    padding: 2px var(--match-horizontal-padding);
-    background: var(--match-background);
+    padding: 2px var(--bv-match-horizontal-padding);
+    background: var(--bv-match-bg-color);
 
     &.hover {
-      background: var(--secondary-background) !important;
+      background: var(--bv-surface-color) !important;
     }
 
     &:nth-of-type(1) {
       border-bottom: none;
-      border-top-left-radius: var(--match-border-radius);
-      border-top-right-radius: var(--match-border-radius);
-      padding-top: var(--match-vertical-padding);
+      border-top-left-radius: var(--bv-match-border-radius);
+      border-top-right-radius: var(--bv-match-border-radius);
+      padding-top: var(--bv-match-vertical-padding);
     }
 
     &:nth-of-type(2) {
       border-top: none;
-      border-bottom-left-radius: var(--match-border-radius);
-      border-bottom-right-radius: var(--match-border-radius);
-      padding-bottom: var(--match-vertical-padding);
+      border-bottom-left-radius: var(--bv-match-border-radius);
+      border-bottom-right-radius: var(--bv-match-border-radius);
+      padding-bottom: var(--bv-match-vertical-padding);
     }
 
     .name {
@@ -316,12 +331,12 @@
 
       // Participant origin hint (e.g. #1)
       &.hint {
-        color: var(--hint-color);
+        color: var(--bv-hint-color);
       }
 
       & > img {
-        width: var(--participant-image-size);
-        height: var(--participant-image-size);
+        width: var(--bv-participant-image-size);
+        height: var(--bv-participant-image-size);
         margin-right: 4px;
         object-fit: cover;
         border-radius: 4px;
@@ -332,7 +347,7 @@
 
       // Participant name
       & > span {
-        color: var(--hint-color);
+        color: var(--bv-hint-color);
         font-size: 0.9em;
         font-weight: initial;
       }
@@ -349,11 +364,11 @@
     }
 
     &.win .result {
-      color: var(--win-color);
+      color: var(--bv-win-color);
     }
 
     &.loss .result {
-      color: var(--loss-color);
+      color: var(--bv-lose-color);
     }
   }
 
